# rag-youtube-titles-generator

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml  test.py
app/: app.py  data_prep.py  db.py  db_init.py  db_prep.py  ingest.py  rag.py
lab/notebooks/: evaluation_data_lab.ipynb  evaluation_lab.ipynb  rag_lab.ipynb
